--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
       "name": "Launch Frontend Server",
       "type": "node",
       "request": "launch",
-      "cwd": "${workspaceFolder}/src/frontend",
+      "cwd": "${workspaceFolder}/frontend",
       "runtimeExecutable": "npm",
       "runtimeArgs": ["start"],
       "console": "integratedTerminal",
